trunk/Archive2/3f/2c7e25c543fb28/output
main.cpp:10:1: error: static_assert failed "2"
static_assert(std::is_volatile< decltype(a.i) >{}, "2");
^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
